// Prisma schema for the Onboarding Profile (steuereule#29).
// Managed EU Postgres, expand-only versioned migrations (ADR-047).

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

/// One row per userId (guest session or real account, ADR-0007). Plain persisted
/// facts collected during Onboarding — no derived values, clean side of the
/// determinism boundary (ADR-014/048); @steuereule/core never recomputes these.
model Profile {
  id           String   @id @default(uuid())
  /// Scoping key. Never read from the request body/query/path — only ever set
  /// from the trusted userId the UserContextGuard produced (ADR-0007).
  userId       String   @unique
  firstName    String
  lastName     String
  /// Steuerliche Identifikationsnummer — exactly 11 digits (validated server-side
  /// via @steuereule/core's isValidSteuerId before this is ever written).
  /// Field-encrypted at rest (ADR-0008, prisma-field-encryption, AES-256-GCM,
  /// randomized nonce per write — ciphertext is longer than the plaintext digit
  /// string, so the column stays `String`, no type migration needed). `mode=strict`
  /// so a tampered/corrupted ciphertext throws on read instead of silently passing
  /// through as clear text or null (REQ-003.5) — safe once every existing row is
  /// encrypted, which is true from this migration onward.
  steuerId     String /// @encrypted?mode=strict
  /// Optional — 1-13 digits if present (isValidSteuernummer). Field-encrypted at
  /// rest for the same reason as steuerId.
  steuernummer String? /// @encrypted?mode=strict
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
}

/// Append-only audit trail of who touched a user's sensitive tax/profile fields, and
/// when (ADR-0008, REQ-004, DSGVO Art. 30 accountability). Deliberately carries no
/// value column — not the plaintext, not the ciphertext — only who/what/when. Never
/// updated or deleted at the application layer (no repository method exposes
/// anything but append); DB-level (role/trigger) enforcement is a follow-up.
model TaxDataAccessLog {
  id        String      @id @default(uuid())
  /// Scoping key — same trusted userId as Profile.userId (ADR-0007). Never joined
  /// across users; every read of this table is scoped to a single userId.
  userId    String
  action    AuditAction
  /// The resource/field-class touched, e.g. "profile". A short discriminator, never
  /// the sensitive value itself.
  resource  String
  createdAt DateTime    @default(now())

  @@index([userId])
}

enum AuditAction {
  READ
  WRITE
}

// --- better-auth tables (ADR-0009/ADR-0012 §3) --------------------------------
// New tables only — a pure expand-only migration. None of these touch Profile or
// TaxDataAccessLog. Field/table shapes follow better-auth's own canonical Prisma
// schema (the shape its Prisma adapter queries against unconditionally) so no
// custom `modelName`/field-mapping config is needed on the betterAuth() side —
// Prisma's client property for each model is just its lowerCamelCase name
// (`prisma.user`, `prisma.session`, ...), which is exactly the model identifier
// the adapter looks up. better-auth's own `id` values are app-generated
// (typically a random id), but `@default(uuid())` is a safe DB-side fallback,
// mirroring Profile/TaxDataAccessLog's existing convention.

/// A real account (better-auth). `id` is the same userId namespace as a guest
/// session's opaque uuid (ADR-0012 §3) — Profile.userId holds either without a
/// type change, and REQ-006's guest->account upgrade just re-keys the FK value.
model User {
  id            String    @id @default(uuid())
  name          String
  email         String    @unique
  emailVerified Boolean   @default(false)
  image         String?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  sessions      Session[]
  accounts      Account[]
}

/// DB-backed, server-revocable session (ADR-0012 §3). Read on every
/// authenticated request via UserContextGuard -> auth.api.getSession(); guest
/// requests never touch this table (ADR-0012 §2).
model Session {
  id        String   @id @default(uuid())
  expiresAt DateTime
  token     String   @unique
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

/// One row per credential/identity linked to a User — email+password today
/// (REQ-005), social providers later (REQ-008). Never logged in plaintext
/// (better-auth hashes with scrypt before this is ever written).
model Account {
  id                    String    @id @default(uuid())
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt
}

/// Short-lived tokens: email verification, password reset (REQ-005/REQ-010).
model Verification {
  id         String    @id @default(uuid())
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime? @default(now())
  updatedAt  DateTime? @updatedAt
}

/// Login rate-limit counters, DB-backed (REQ-010/ADR-0012 §5) — deliberately not
/// in-memory, so the limit holds across horizontally scaled API instances (an
/// in-memory counter resets per pod and is trivially bypassed).
model RateLimit {
  id          String  @id @default(uuid())
  key         String?
  count       Int?
  lastRequest BigInt?
}

/// One row per (userId, steuerjahr) — the raw inputs behind the Cockpit's refund
/// estimate range (REQ-001, steuereule#91/#92). Deliberately stores only the plain
/// facts (`baseEstimate`/`openItems`/`openConflicts`); the derived range itself is
/// never persisted — it's recomputed on every read via @steuereule/core's
/// `cockpitRange()` (ADR-014/048 determinism boundary), so this table can never drift
/// out of sync with the uncertainty rule. No `/// @encrypted` field here: ruled
/// out-of-scope for ADR-0008 in review (Musti) — unlike Profile.steuerId this holds no
/// tax identifier, only a rounded refund estimate and two open-item/conflict counts.
/// Revisit if assessed amounts or income figures ever land on this entity.
model TaxYear {
  id            String   @id @default(uuid())
  /// Scoping key — same trusted userId as Profile.userId (ADR-0007). Never read from
  /// the request path/query/body.
  userId        String
  /// The tax year shown in the Cockpit (e.g. 2026). Part of the request path, but the
  /// row lookup is always userId-scoped first (`@@unique([userId, steuerjahr])`).
  steuerjahr    Int
  /// Base estimate before the range is spread, in whole euro (>= 0) — "Basis vor
  /// Berater-Funden" (successor of demo-daten.js's `schaetzung`).
  baseEstimate  Int
  /// Number of still-open interview/receipt items (>= 0).
  openItems     Int
  /// Number of open posten conflicts (ADR-008 "± offen"); defaults to 0 until that
  /// feature exists.
  openConflicts Int      @default(0)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  @@unique([userId, steuerjahr])
}

/// QR-code device-authorization (#238, RFC 8628, ADR-0024). better-auth's
/// `device-authorization` plugin owns this table's core nine fields — its own
/// canonical shape (`schema.mjs`), unrenamed, so no `schema.deviceCode.fields.*`
/// override is needed on the plugin config side. The plugin's own HTTP routes are
/// switched off via `disabledPaths` (ADR-0024) — only our `/v1/device/*` endpoints
/// and server-side `auth.api.*` calls ever touch this table, which is what makes the
/// four `request*` columns below safe to add: the plugin never reads or writes
/// them, so there is nothing for it to conflict with.
model DeviceCode {
  id              String    @id @default(uuid())
  /// RFC 8628 `device_code` — the polling secret, never shown to a human.
  deviceCode      String    @unique
  /// RFC 8628 `user_code` — the short code shown on the desktop and typed/matched on
  /// the phone. Looked up directly by the plugin's `/device`, `/device/approve`,
  /// `/device/deny` handlers.
  userCode        String    @unique
  /// Claimed by `/device` (GET) once a signed-in phone opens the verification URL —
  /// null while pending-unclaimed. Never the desktop's identity; always the
  /// approving phone's.
  userId          String?
  expiresAt       DateTime
  /// One of "pending" | "approved" | "denied" — a plain plugin-owned string, not a
  /// Prisma enum, so a plugin version bump introducing a new status value can never
  /// fail a CHECK constraint this schema didn't anticipate.
  status          String
  /// Set on each `/device/token` poll — backs the plugin's own `slow_down` throttle.
  lastPolledAt    DateTime?
  /// Milliseconds between polls (plugin's `interval` option, ms-encoded).
  pollingInterval Int?
  clientId        String?
  /// Space-separated OAuth-style scope string (plugin's own RFC 8628 field).
  scope           String?

  // --- Our columns (ADR-0024) — nullable, additive, never read by the plugin ---
  /// The desktop's User-Agent at `/v1/device/code` request time — match-verification
  /// evidence (AC-3) for the phone's approval screen, never the approving phone's own.
  requestUserAgent String?
  /// The desktop's request IP at `/v1/device/code` time — the geo-IP resolver's
  /// input (task 0b); never persisted alongside a resolved region that could outlive
  /// its own accuracy guarantee (the resolver re-derives `requestRegion` once, at
  /// write time, from this same value).
  requestIp        String?
  /// Country-level result of resolving `requestIp` (task 0b) — `null` until
  /// resolved, "unknown" (never a guess) when the address is private/unroutable or
  /// the geo-IP database is stale (ADR-0021 control). Two consumers: the phone's
  /// match-verification approval screen and the device list in Profil.
  requestRegion    String?
  /// When the desktop's `/v1/device/code` request was made — distinct from
  /// `expiresAt`/`lastPolledAt`, which are the plugin's own protocol timestamps.
  requestedAt      DateTime?

  @@index([userId])
}

/// Minimal Löschschutz seam (ADR-0013 §5, product ADR-011). While a hold is active
/// (`holdUntil` in the future) for a given userId/resource pair, the account-deletion
/// transaction exempts that resource from erasure/anonymisation instead of tearing it
/// down. `resource` names the thing held — today only "profile" and "auditLog" are
/// meaningful (no filing/tax-year Löschschutz model persists yet), so the exempt set
/// is vacuous in real use; the REQ-011 acceptance test seeds a synthetic row to
/// exercise both the exempt and non-exempt branches for real. Expand-only: this
/// migration adds only this one new table, no change to any existing model.
model LegalHold {
  id        String   @id @default(uuid())
  /// Scoping key — same trusted userId namespace as Profile/TaxDataAccessLog.
  userId    String
  /// The resource held, e.g. "profile" or "auditLog" — matches the model the
  /// deletion transaction consults it against, never a free-text label.
  resource  String
  /// The hold is active while `holdUntil` is in the future; once past, the deletion
  /// transaction treats it as expired and proceeds normally.
  holdUntil DateTime
  createdAt DateTime @default(now())

  @@index([userId])
}
